fixed finger spacing

--- a/client/src/components/Intro.scss
+++ b/client/src/components/Intro.scss
@@ -20,7 +20,7 @@
   padding-top: 30px;
 
   span{
-    // margin-top: 1em;
+    margin-top: 1em;
     margin-right: .5em;
     
   }
